Package page bug
Custom Package overlapping with footer fixed

--- a/assets/css/packages.css
+++ b/assets/css/packages.css
@@ -14,7 +14,7 @@ p {
 
 body {
     margin-top: 100px; 
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     padding: 40px;
 }
 
@@ -133,6 +133,10 @@ body {
     .custom-package-button {
         display: block;
         margin: 0 auto;
+    }
+
+    body {
+        margin-bottom: 150px;
     }
 }
 
